# cdcrtool

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  checklist-tasks-v2.csv  checklist-tasks.csv  docker-compose.yml  env.example  pyproject.toml  roberta_calculate_sims.py  validate.py
CDCR_Corpus/: CDCR_Corpus_Builder.ipynb  README.md  checklist_conll_testset.csv  dev.conll  dev_entities.json  news_urls.json  sci_papers.json  test.conll  train.conll  webgetter.py
alembic/: env.py
alembic/versions/: 1437e4c3ac82_add_is_difficult_task_list.py  20721bb6a953_add_password_salt_for_users.py  364df0607448_add_admin_perm_to_user_table.py  5bbbd88f7acf_drop_news_text_url_sci_text_url_in_.py  7ddae5807eae_separate_news_and_science_content_from_.py  82b80818eeee_initial_revision.py  86ebe258e29f_make_pw_max_length_longer.py  921f9c6e9456_add_iaa_priority_column.py  97cd96bf17cb_add_stuff_for_user_management_in_flask_.py  a7573d5a6512_add_priority_column.py  ada801bded08_add_bad_task_qol_improvements.py  ce6533e84e25_add_timestamp_fields_to_all_models.py  ee4b2e1be395_add_permission_to_view_google_sheets.py  f6161e41ef02_make_ent_column_wider.py  f70e9245c226_make_url_columns_wider.py  fb5d592383f6_make_add_similarity_column_for_tasks.py
assets/: README.md
cdcrapp/: __init__.py  __main__.py  analyse.py  checklist.py  compare.py  corpusbuild.py  count.py  export.py  gsheets.py  ingest.py  joshi2conll.py  kappa.py  model.py  resultgraphs.py  roberta.py  services.py  settings.py  stapp.py  stapp_new.py  test_muc.py  testingest.py  threshold.py
cdcrapp/web/: __init__.py  cli.py  resources.py  views.py  wsgi.py
client/: package.json
client/public/: index.html
client/src/: ApiConfig.js  index.js
client/src/actions/: auth.js  (+3 more)
mentions/31_07_20_5pc/: dev.json  test.json  test_entities.json  train.json  train_entities.json
(+19 files in other folders)
