[tool.poetry]
name = "cdcrtool"
version = "0.1.0"
description = "Cross Document Coreference Ground Truthing Tool"
authors = ["James Ravenscroft <ravenscroftj@gmail.com>"]
license = "MIT"

packages = [
    {include = "cdcrapp"}
]

[tool.poetry.dependencies]
python = "^3.6.1"
streamlit = "^0.57.3"
pandas = "^1.0.3"
numpy = "^1.18.2"
sqlalchemy = "^1.3.16"
redis = "^3.4.1"
psycopg2-binary = "^2.8.5"
click = "^7.1.1"
alembic = "^1.4.2"
python-dotenv = "^0.13.0"
google-api-python-client = "^1.8.0"
google-auth-httplib2 = "^0.0.3"
google-auth-oauthlib = "^0.4.1"
tqdm = "^4.45.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
